# v4.py.js

./: .gitignore  404.html  CHANGELOG.md  CURRICULUM.md  DEBUG-CHECKLIST.md  LICENCE  README.md  VERIFY_GITHUB_PAGES.md  index.html  pyproject.toml  serve.py  test-file-access.html  test-graph-rendering.html  todos.md
.github/workflows/: deploy.yml
scenery/: README.md  app.js  index-.html  index.html  math_visualizations_1ere.md  sujets0-app-simple.js  sujets0-app.js  sujets0-simple.html  sujets0-simple.md  sujets0.html
scenery/packaged/: ALL_GRAPHS_REFERENCE.md  CSS_FIX_SUMMARY.md  DYNAMIC_PARAMS_GUIDE.md  INTEGRATION_GUIDE.md  JINJA_USAGE.md  LOADING_LOGIC.md  PACKAGE_SUMMARY.md  PCAGraphLoader.js  README.md  SIMPLE_USAGE.md  SOLUTION-USE-THIS.js  UPDATES.md  debug-test.html  example-external-usage.html  example-generators-integration.js  fixed-generators.js  fragment-example.html  graph-loader-partial.html  index-graphs-cdn.js  index-graphs.js  integration-example-complete.html  package.json  test-cdn-integration.html  test-config-params.html  test-dynamic-params.html  test-graph-dict.html  test-loading-logic.html  test-svg-dimensions.html  test-v21.html  test.html  tests_main.html
src/pca_graph_viz/: __init__.py
src/pca_graph_viz/core/: __init__.py  color_utils.py  graphs.css  nagini_adapter.py  svg_utils.py
src/pca_graph_viz/docs/: graph_dict_template.py
src/pca_graph_viz/models/: __init__.py  curve_model.py  foreign_object.py  line_model.py  line_object.py
src/pca_graph_viz/static/: grid_tests.html  oklch-to-hex-converter.js
src/pca_graph_viz/tests/: __init__.py  test_all_graphs.py  test_dispatch_any_a.py  test_graph_dict.py  test_parabola_sign_shift_ranges.py
src/pca_graph_viz/tests/graphs/: __init__.py  graph1.py  graph10.py  graph11.py  graph12.py  graph13.py  graph14.py  graph15.py  graph16.py  graph17.py  graph2.py  graph3.py  graph4.py  graph5.py  graph6.py  graph7.py  graph8.py  graph9.py  graph_1ere_coordinate_geometry_circle_equation_visualization.py  graph_1ere_coordinate_geometry_distance_formula_illustration.py  graph_1ere_coordinate_geometry_line_in_coordinate_system.py  (+70 more)
